--- a/apply-javascript.html
+++ b/apply-javascript.html
@@ -7,5 +7,7 @@
   </head>
   <body>
     <button>Click me</button>
+    <button>Click me</button>
+    <button>Click me</button>
   </body>
 </html>
